--- a/home/vercel.json
+++ b/home/vercel.json
@@ -2,26 +2,26 @@
     "version": 2,
     "builds": [
         {
-            "src":"minorproject/wsgi.py",
-            "use":"@vercel/python",
-            "config":{ "maxlambdaSize" : "15mb", "runtime": "python3.9"}
+            "src": "minorproject/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
         },
         {
-            "src":"build_files.sh",
-            "use":"@vercel/static-build",
-            "config" : {
-                "distDir":"staticfiles_build"
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
             }
         }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/static/(.*)",
-            "dest":"/static/$1"
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
         },
         {
-            "src":"/(.*)",
-            "dest":"minorproject/wsgi.py"
+            "src": "/(.*)",
+            "dest": "minorproject/wsgi.py"
         }
     ]
 }
