--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,22 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "manage.py",
+  "builds": [{
+      "src": "minorproject/wsgi.py",
       "use": "@vercel/python",
-      "config": { "zeroConfig": true }
-    }
-  ],
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+  },
+  {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles_build" }
+  }],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/manage.py"
-    }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "minorproject.settings",
-    "SECRET_KEY": "@name",
-    "DEBUG": "False"
-  }
+      {
+          "src": "/static/(.*)",
+          "dest": "/static/$1"
+      },
+      {
+          "src": "/(.*)",
+          "dest": "backend/wsgi.py"
+      }
+  ]
 }
