--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
       },
       {
           "src": "/(.*)",
-          "dest": "backend/wsgi.py"
+          "dest": "minorproject/wsgi.py"
       }
   ]
 }
