--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ cryptography==42.0.2
 cssselect2==0.7.0
 cycler==0.12.1
 defusedxml==0.7.1
-django>=3.2,<4.0
+Django==5.0.6
 django-allauth==0.61.1
 django-cors-headers==4.3.1
 django-filter==24.2
@@ -101,7 +101,6 @@ pysiology==0.0.9.6
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python3-openid==3.2.0
-Python == 3.12.1
 pytz==2024.1
 PyWavelets==1.6.0
 PyYAML==6.0.1
