--- a/requirements.txt
+++ b/requirements.txt
@@ -23,13 +23,13 @@ cssselect2==0.7.0
 cycler==0.12.1
 defusedxml==0.7.1
 Django==5.0.6
-django-allauth==0.61.1
-django-cors-headers==4.3.1
-django-filter==24.2
-django-oauth-toolkit==2.3.0
-djangorestframework==3.15.1
-djangorestframework-oauth==1.1.0
-djangorestframework-simplejwt==5.3.1
+# django-allauth==0.61.1
+# django-cors-headers==4.3.1
+# django-filter==24.2
+# django-oauth-toolkit==2.3.0
+# djangorestframework==3.15.1
+# djangorestframework-oauth==1.1.0
+# djangorestframework-simplejwt==5.3.1
 Faker==22.4.0
 filelock==3.13.4
 Flask==3.0.3
