--- a/requirements.txt
+++ b/requirements.txt
@@ -23,13 +23,13 @@ cssselect2==0.7.0
 cycler==0.12.1
 defusedxml==0.7.1
 Django==5.0.6
-# django-allauth==0.61.1
-# django-cors-headers==4.3.1
-# django-filter==24.2
-# django-oauth-toolkit==2.3.0
-# djangorestframework==3.15.1
-# djangorestframework-oauth==1.1.0
-# djangorestframework-simplejwt==5.3.1
+django-allauth==0.61.1
+django-cors-headers==4.3.1
+django-filter==24.2
+django-oauth-toolkit==2.3.0
+djangorestframework==3.15.1
+djangorestframework-oauth==1.1.0
+djangorestframework-simplejwt==5.3.1
 Faker==22.4.0
 filelock==3.13.4
 Flask==3.0.3
@@ -84,7 +84,6 @@ pdfkit==1.0.0
 PeakUtils==1.3.4
 pillow==10.2.0
 protobuf==4.25.3
-psycopg2==2.9.9
 py-ecg-detectors==1.3.5
 pyarrow==16.0.0
 pycparser==2.21
